Update FusionTestOpMode.java